--- a/src/assets/scss/object/project/_flexbox.scss
+++ b/src/assets/scss/object/project/_flexbox.scss
@@ -70,7 +70,7 @@
 
 				& p:last-child {
 					background-color: #fff;
-					color: #2581c6;
+					color: #0059B4;
 					font-weight: 500;
 					letter-spacing: 0.1em;
 					line-height: 26px;
