--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -976,7 +976,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #0059b4 !important;
+			color: #fff !important;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -984,6 +984,7 @@
 			order: 1;
 			@include is-sp {
 				font-size: 21px;
+				color: #fff !important;
 			}
 			@include is-max(400px) {
 				font-size: 6vw;
