--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -976,7 +976,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #0059b4 !important;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -1639,13 +1639,15 @@
 			display: block;
 		}
 
-		.br-sp {
-			display: none;
-			@include is-sp {
-				display: block;
-			}
+	}
+
+	.br-sp {
+		display: none;
+		@include is-sp {
+			display: block;
 		}
 	}
+
 }
 
 .rep1 {
