--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -2,7 +2,7 @@
 	&01 {
 		&__title {
 			color: $color-text03;
-			font-family: yu-mincho-pr6n, sans-serif;
+			font-family: YakuHanJP, yu-mincho-pr6n, sans-serif;
 			letter-spacing: 0.18em;
 			line-height: 1;
 			padding: 15px 0 20px 0;
