--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -1,5 +1,8 @@
 .result {
 	position: relative;
+	.l-wrap {
+		position: relative;
+	}
 	.c-banner {
 		background: linear-gradient(to right, #0059c4, #000017);
 		padding: 0 0 80px 0;
@@ -59,6 +62,7 @@
 		background: linear-gradient(to left, #0059c6, #000017);
 		clip-path: polygon(0 50px, 100% 0, 100% 100%, 0% 100%);
 		margin-top: -100px;
+		position: relative;
 
 		@include is-sp {
 			clip-path: polygon(0 43px, 100% 12px, 100% 101%, 0% 100%);
@@ -70,18 +74,27 @@
 			content: "";
 			position: absolute;
 			width: 100%;
-			height: 20%;
+			height: 22%;
 			top: 0;
 			left: 0;
 			right: 0;
-			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 72% 33%, 0% 19%, 0 0, 0 0);
+			clip-path: polygon(
+				50% 6.3%,
+				100% 0%,
+				100% 16%,
+				72% 33%,
+				-8% 13.2%,
+				10% 11.2%,
+				0% 13%
+			);
 			background: linear-gradient(to right, #0059c6, #000017);
 			opacity: 0.4;
+			z-index: 151;
 			@include is-sp {
 				clip-path: polygon(
 					50% 0%,
 					100% 0,
-					100% 86%,
+					100% 76%,
 					66% 100%,
 					0% 48%,
 					0% 0%,
