--- a/src/assets/scss/pages/_privacy-policy.scss
+++ b/src/assets/scss/pages/_privacy-policy.scss
@@ -237,7 +237,7 @@
 						letter-spacing: 0.1em;
 						padding-bottom: 10px;
 						border-bottom: 1px solid #494342;
-						color: #258acf;
+						color: #0059b4;
 
 						@include is-sp {
 							padding: 0 20px 10px;
@@ -291,7 +291,7 @@
 							}
 
 							&--num {
-								color: #258acf;
+								color: #0059b4;
 							}
 						}
 
