--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -326,7 +326,7 @@
 			}
 
 			&--row_2 {
-				width: calc(100% - 57.14%);
+				width: calc(100% - 58.14%);
 				padding-left: 120px;
 
 				@include is-max(1100px) {
@@ -349,7 +349,7 @@
 					color: #fff;
 
 					&.ttl {
-						font-family: yu-gothic-pr6n, sans-serif;
+						font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 						font-weight: 500;
 						letter-spacing: 0.2em;
 						@include font-line(13, 26);
@@ -396,7 +396,7 @@
 					}
 
 					&.desc {
-						font-family: yu-gothic-pr6n, sans-serif;
+						font-family: YakuHanJP, yu-gothic-pr6n, sans-serif;
 						font-weight: 500;
 						letter-spacing: 0.09em;
 						text-align: justify;
