changed: finished on realestatepurchase2 updates and change background color on saleofrealestate

--- a/src/assets/scss/pages/_realestatepurchase2.scss
+++ b/src/assets/scss/pages/_realestatepurchase2.scss
@@ -958,7 +958,7 @@
 			font-family: yu-mincho-pr6n, sans-serif;
 			line-height: 26px;
 			background-color: #fff;
-			color: #2581c6;
+			color: #0059B4;
 			font-weight: 500;
 
 			@include is-max(940px) {
