--- a/src/assets/scss/pages/_saleofrealestate.scss
+++ b/src/assets/scss/pages/_saleofrealestate.scss
@@ -287,6 +287,7 @@
 
 	&__section_2 {
 		position: relative;
+		background: linear-gradient(to right, #003782, #0059b6) !important;
 
 		@include is-sp {
 			.sect_2__box-big-new {
@@ -499,11 +500,12 @@
 
 	&__section_5 {
 		position: relative;
-		background: linear-gradient(
-			90deg,
-			rgba(51, 51, 102, 1) 0%,
-			rgba(0, 89, 182, 1) 100%
-		) !important;
+		// background: linear-gradient(
+		// 	90deg,
+		// 	rgba(51, 51, 102, 1) 0%,
+		// 	rgba(0, 89, 182, 1) 100%
+		// ) !important;
+		background: linear-gradient(to right, #003782, #0059b6) !important;
 		margin-bottom: 0 !important;
 		overflow: hidden;
 
