--- a/src/assets/scss/pages/_office-gallery.scss
+++ b/src/assets/scss/pages/_office-gallery.scss
@@ -30,7 +30,12 @@
 		margin: 0 0 0 0;
 		background: linear-gradient(to left, #0059c6, #000017);
 		text-align: center;
-		clip-path: polygon(0 2%, 100% 0, 100% 100%, 0% 100%);
+		clip-path: polygon(0 1.5%, 100% 0, 100% 100%, 0% 100%);
+
+		@include is-sp {
+			clip-path: polygon(0 1%, 100% 0, 100% 100%, 0% 100%);
+			margin-top: -100px;
+		}
 
 		// &::before {
 		// 	content: "";
@@ -128,13 +133,14 @@
 	&__bg_1 {
 		position: absolute;
 		right: 92px;
-		top: -85px;
+		top: -140px;
 		z-index: 0;
 		width: 344px;
 
 		@include is-sp {
 			width: 176px;
-			right: 4%;
+			right: 2%;
+			top: -88px;
 		}
 	}
 
@@ -173,7 +179,7 @@
 		top: -50px;
 		z-index: 0;
 		width: 373px;
-		opacity: 0.3;
+		// opacity: 0.3;
 		@include is-sp {
 			width: 186px;
 			right: 4%;
@@ -198,16 +204,16 @@
 		padding: 170px 0 170px 0;
 		margin-top: -100px;
 
-		&::before{
-			content: "";
-			position: absolute;
-			width: 100%;
-			top: 0;
-			left: 0;
-			height: 90px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			clip-path: polygon(0 13%, 100% 0, 100% 14%, 70% 38%);
-		}
+		// &::before{
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	top: 0;
+		// 	left: 0;
+		// 	height: 90px;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	clip-path: polygon(0 13%, 100% 0, 100% 14%, 70% 38%);
+		// }
 
 		@include is-sp {
 			margin-top: -50px;
@@ -295,6 +301,116 @@
 
 		.c-img_box__ttl {
 			letter-spacing: 0.1em;
+		}
+	}
+
+	&--shadow {
+		position: relative;
+
+		@include is-sp {
+			padding: 125px 0 110px 0;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			top: 0;
+			left: 0;
+			height: 49%;
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+			clip-path: polygon(50% -10%, 100% 0, 100% 16%, 72% 33%, 0% 16%, 0 0, 0 0);
+
+			@include is-sp {
+				clip-path: polygon(
+					50% -10%,
+					100% 0,
+					100% 25%,
+					72% 33%,
+					0% 18%,
+					0 0,
+					0 0
+				);
+				height: 29%;
+			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			bottom: -20px;
+			left: 0;
+			height: 21%;
+			background: linear-gradient(to right, #0059c4, #000017);
+			clip-path: polygon(0 47%, 32% 0%, 100% 15%, 0% 100%);
+			opacity: 0.4;
+
+			@include is-max(1000px) {
+				clip-path: polygon(0 47%, 32% 0%, 100% 24%, 0% 100%);
+			}
+
+
+			@include is-sp {
+				clip-path: polygon(0 47%, 36% 12%, 100% 40%, 0% 100%);
+				height: 15%;
+				bottom: -4%;
+			}
+
+			@include is-max(500px) {
+				clip-path: polygon(0 47%, 36% 12%, 100% 36%, 0% 100%);
+			}
+		}
+	}
+
+	&--shadow2 {
+		position: relative;
+
+		@include is-sp {
+			padding-bottom: 120px;
+		}
+
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			top: -12px;
+			left: 0;
+			height: 58%;
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+			clip-path: polygon(50% -10%, 100% 0, 100% 16%, 66% 38%, 0% 27%, 0 0, 0 0);
+			z-index: -1;
+
+			@include is-sp {
+				clip-path: polygon(50% -10%, 100% 0, 100% 25%, 72% 33%, 0% 25%, 0 0, 0 0);
+				// top: -31px;
+			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			bottom: -20px;
+			left: 0;
+			background: linear-gradient(to right, #0059c4, #000017);
+			opacity: 0.4;
+			z-index: -1;
+			clip-path: polygon(0 47%, 32% 0%, 100% 25%, 0% 100%);
+    		height: 161px;
+
+			@include is-sp {
+				clip-path: polygon(0 47%, 36% 12%, 100% 46%, 0% 100%);
+				height: 180px;
+				bottom: -4%;
+			}
+
+			@include is-max(500px) {
+				clip-path: polygon(0 47%, 36% 28%, 100% 50%, 0% 100%);
+			}
 		}
 	}
 
@@ -408,6 +524,7 @@
 		// padding: 110px 0 50px 0;
 		padding: 75px 0 50px 0;
 		background-color: #fff;
+		overflow: hidden;
 		margin-top: -135px;
 		@include is-sp {
 			margin-top: -80px;
