--- a/src/assets/scss/pages/_office-gallery.scss
+++ b/src/assets/scss/pages/_office-gallery.scss
@@ -351,7 +351,6 @@
 				clip-path: polygon(0 47%, 32% 0%, 100% 24%, 0% 100%);
 			}
 
-
 			@include is-sp {
 				clip-path: polygon(0 47%, 36% 12%, 100% 40%, 0% 100%);
 				height: 15%;
@@ -369,8 +368,8 @@
 
 		@include is-sp {
 			padding-bottom: 120px;
+			padding-top: 77px;
 		}
-
 
 		&::before {
 			content: "";
@@ -385,8 +384,17 @@
 			z-index: -1;
 
 			@include is-sp {
-				clip-path: polygon(50% -10%, 100% 0, 100% 25%, 72% 33%, 0% 25%, 0 0, 0 0);
-				// top: -31px;
+				clip-path: polygon(
+					50% -10%,
+					100% 0,
+					100% 25%,
+					72% 33%,
+					0% 23%,
+					0 0,
+					0 0
+				);
+				height: 35%;
+				top: -2%;
 			}
 		}
 
@@ -400,17 +408,31 @@
 			opacity: 0.4;
 			z-index: -1;
 			clip-path: polygon(0 47%, 32% 0%, 100% 25%, 0% 100%);
-    		height: 161px;
+			height: 161px;
 
 			@include is-sp {
-				clip-path: polygon(0 47%, 36% 12%, 100% 46%, 0% 100%);
+				clip-path: polygon(0 47%, 36% 12%, 100% 49%, 0% 100%);
 				height: 180px;
 				bottom: -4%;
 			}
 
 			@include is-max(500px) {
-				clip-path: polygon(0 47%, 36% 28%, 100% 50%, 0% 100%);
+				clip-path: polygon(0 47%, 36% 28%, 100% 52%, 0% 100%);
 			}
+		}
+	}
+
+	.sp-pb {
+		@include is-sp {
+			padding-bottom: 120px !important;
+		}
+	}
+
+	.sp-bg4 {
+		@include is-sp {
+			width: 123px;
+			position: absolute;
+			top: -25px;
 		}
 	}
 
