--- a/src/assets/scss/pages/_casestudymain.scss
+++ b/src/assets/scss/pages/_casestudymain.scss
@@ -38,7 +38,7 @@
 
 		@include is-sp {
 			padding-top: 0;
-			clip-path: polygon(0 43px, 100% 12px, 100% 99%, 0% 100%);
+			clip-path: polygon(0 43px, 100% 12px, 100% 100%, 0% 100%);
 			padding-bottom: 40px;
 		}
 
@@ -75,6 +75,7 @@
 		}
 
 		&::after {
+			display: none;
 			content: "";
 			position: absolute;
 			width: 100%;
@@ -82,14 +83,15 @@
 			left: 0;
 			height: 110px;
 			background: linear-gradient(to right, #0059c4, #000017);
-			clip-path: polygon(0 47%, 32% 0%, 100% 44%, 0% 100%);
+			clip-path: polygon(0 47%, 32% 0%, 100% 100%, 0% 100%);
 			opacity: 0.4;
-			@include is-max(1000px) {
-				// height: 8.8%;
-				clip-path: polygon(0 40%, 32% 0%, 100% 31%, 0% 100%);
-			}
+
+			// @include is-max(1000px) {
+			// 	// height: 8.8%;
+			// 	clip-path: polygon(0 40%, 32% 0%, 100% 31%, 0% 100%);
+			// }
 			@include is-sp {
-				clip-path: polygon(0 54%, 41% 30%, 100% 74%, 0% 100%);
+				clip-path: polygon(0 54%, 41% 30%, 100% 100%, 0% 100%);
 				height: 4%;
 			}
 		}
