--- a/src/assets/scss/pages/_realestateoperation.scss
+++ b/src/assets/scss/pages/_realestateoperation.scss
@@ -5,6 +5,10 @@
 		height: 100% !important;
 	}
 
+	.c-img_box03 {
+		background: linear-gradient(45deg, #003782, #0059b6) !important;
+	}
+
 	.c-banner {
 		padding: 0 0 100px 0;
 		background: linear-gradient(to right, #0059c4, #000017);
@@ -47,6 +51,14 @@
 					font-size: 3.4vw;
 				}
 			}
+		}
+	}
+
+	.qtext {
+		letter-spacing: 0.12em !important;
+
+		@include is-sp {
+			letter-spacing: 0.2em !important;
 		}
 	}
 
@@ -99,15 +111,29 @@
 		}
 
 		&__center {
-			padding: 194px 0 160px 0;
+			padding: 167px 0 160px 0;
 			background: linear-gradient(to left, #0059c6, #000017);
-			clip-path: polygon(100% 0, 100% 93%, 73% 100%, 16% 93%, 0 81%, 0 11%);
+			clip-path: polygon(100% 0, 100% 100%, 73% 100%, 16% 100%, 0 100%, 0 11%);
 			z-index: 150;
 			position: relative;
 
 			@include is-sp {
-				padding: 180px 0 120px 0;
+				padding: 180px 0 155px 0;
 				clip-path: polygon(100% 0, 100% 89%, 17% 93%, 16% 93%, 0 86%, 0 11%);
+
+				&::after {
+					content: "";
+					position: absolute;
+					width: 100%;
+					bottom: 0;
+					right: 0;
+					height: 170px;
+					background: linear-gradient(to right, #0059c6, #000017);
+					clip-path: polygon(32% 19%, 100% 53%, 21% 100%, 0 75%, 0 34%);
+					opacity: 0.4;
+					width: 100%;
+	
+				}
 			}
 
 			@include is-between(750px, 767px) {
@@ -118,7 +144,7 @@
 				content: "";
 				position: absolute;
 				width: 100%;
-				height: 80%;
+				height: 63%;
 				z-index: 99999;
 				top: 0;
 				left: 0;
@@ -127,28 +153,19 @@
 				background: linear-gradient(to right, #0059c6, #000017);
 				opacity: 0.4;
 				@include is-sp {
-					clip-path: polygon(50% 0%, 101% 0, 100% 87%, 67% 100%, 0% 60%, 0% 0%, 0% 0%);
+					clip-path: polygon(
+						50% 0%,
+						101% 0,
+						100% 87%,
+						67% 100%,
+						0% 60%,
+						0% 0%,
+						0% 0%
+					);
 					height: 19%;
 				}
 			}
 
-			&::after {
-				content: "";
-				position: absolute;
-				width: 100%;
-				bottom: 0;
-				right: 0;
-				height: 135px;
-				background: linear-gradient(to right, #0059b6, #003782);
-				clip-path: polygon(0 85%, 145% 0, 100% 100%);
-				opacity: 1;
-				width: 100%;
-
-				@include is-sp{
-					clip-path: polygon(32% 19%, 100% 61%, 21% 102%, 0 76%, 0 33%);
-					opacity: 0.4;
-				}
-			}
 		}
 
 		&__eng_ttl {
@@ -263,15 +280,21 @@
 	.sect_2 {
 		position: relative;
 		background: linear-gradient(to right, #003782, #0059b6);
+		clip-path: polygon(17% 10%, 100% 0, 100% 100%, 0 100%, 0% 0);
+		margin-top: -120px;
+		padding: 100px 0;
 
-		@include is-sp{
+		@include is-sp {
 			margin-top: -80px;
+			clip-path: polygon(21% 2%, 100% 0, 100% 100%, 0 100%, 0% 0);
+			padding: 0;
 		}
 
 		&__box-big-new {
 			position: absolute;
 			left: 46%;
-			top: 18px;
+			top: 120px;
+			opacity: 0.3;
 
 			@include is-sp {
 				width: 164px;
@@ -284,8 +307,10 @@
 
 		&__box-big-new2 {
 			position: absolute;
-			bottom: 11px;
+			bottom: 117px;
 			margin-left: -60px;
+			opacity: 0.3;
+			width: 200px;
 
 			@include is-sp {
 				display: none;
@@ -302,35 +327,52 @@
 		&::before {
 			content: "";
 			position: absolute;
-			width: 100%;
-			top: -108px;
-			height: 123px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+			width: 83%;
+			height: 32%;
+			top: 0;
+			right: 0;
+			clip-path: polygon(50% 0%, 100% 0, 100% 20%, 67% 43%, 0% 32%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+			z-index: 1;
 
 			@include is-sp {
-				top: -29px;
-				height: 30px;
 				display: none;
 			}
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			bottom: -58px;
-			height: 60px;
-			z-index: 1;
-			background: linear-gradient(to right, #003782, #0059b6);
-			-webkit-clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
-			clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
+		// &::before {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	top: -108px;
+		// 	height: 123px;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 
-			@include is-sp {
-				bottom: -29px;
-				height: 30px;
-			}
-		}
+		// 	@include is-sp {
+		// 		top: -29px;
+		// 		height: 30px;
+		// 		display: none;
+		// 	}
+		// }
+
+		// &::after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -58px;
+		// 	height: 60px;
+		// 	z-index: 1;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	-webkit-clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
+		// 	clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
+
+		// 	@include is-sp {
+		// 		bottom: -29px;
+		// 		height: 30px;
+		// 	}
+		// }
 
 		.txt_ttl {
 			@include font-line(24, 30);
@@ -490,9 +532,15 @@
 		background-color: #fff;
 		padding-bottom: 100px;
 		z-index: 9999;
+		clip-path: polygon(86% 0, 100% 5%, 100% 100%, 50% 100%, 0 100%, 0 5%) !important;
+		margin-top: -112px;
+		padding-top: 145px;
 
 		@include is-sp {
 			padding-bottom: 70px;
+			clip-path: polygon(82% 0, 100% 1.5%, 100% 100%, 50% 100%, 0 100%, 0 1%) !important;
+			margin-top: -45px;
+			padding-top: 115px;
 		}
 
 		.c-buttonREP {
@@ -569,7 +617,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -586,7 +634,7 @@
 		}
 
 		&--top-realestate {
-			border-left: 3px solid #4688c8;
+			border-left: 3px solid #0059b4;
 			padding-left: 15px;
 			position: relative;
 
@@ -864,52 +912,50 @@
 	}
 
 	.sect_5 {
-		
-		&__center{
+		&__center {
 			background: linear-gradient(to right, #000017, #0059c6);
 			clip-path: polygon(21% 9%, 100% 0, 100% 100%, 83% 92%, 0 100%, 0 0);
 			position: relative;
 
-			@include is-sp{
+			@include is-sp {
 				clip-path: polygon(21% 2%, 100% 0, 100% 100%, 83% 98%, 0 100%, 0 0);
 			}
 
 			&::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                top: 0;
-                z-index: -1;
-                height: 340px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 21%);
-                opacity: 0.4;
-                width: 79%;
-                right: 0;
+				content: "";
+				position: absolute;
+				width: 100%;
+				top: 0;
+				z-index: -1;
+				height: 340px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 21%);
+				opacity: 0.4;
+				width: 79%;
+				right: 0;
 
-				@include is-sp{
+				@include is-sp {
 					clip-path: polygon(100% -3%, 100% 19%, 56% 39%, 0 9%);
 					height: 200px;
 				}
-            }
+			}
 
-            &::after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                bottom: 0;
-                height: 135px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(0 71%, 30% 15%, 100% 53%, 0% 100%);
-                opacity: 0.4;
-                width: 82%;
+			&::after {
+				content: "";
+				position: absolute;
+				width: 100%;
+				bottom: 0;
+				height: 135px;
+				background: linear-gradient(to right, #0059c4, #000017);
+				clip-path: polygon(0 71%, 30% 15%, 100% 53%, 0% 100%);
+				opacity: 0.4;
+				width: 82%;
 
-				@include is-sp{
+				@include is-sp {
 					clip-path: polygon(0 51%, 40% 40%, 100% 86%, 0% 100%);
 				}
-            }
+			}
 		}
-
 
 		&--clipbg {
 			background-color: #fff;
@@ -1140,7 +1186,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -1208,9 +1254,6 @@
 
 		.l-wrap {
 			position: relative;
-
-
-
 		}
 
 		&__inner-realestate {
@@ -1250,7 +1293,7 @@
 				.txt_ttl {
 					@include font-line(24, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.15em;
@@ -1337,52 +1380,50 @@
 		background: linear-gradient(to right, #000017, #0059c6);
 		clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 83% 92%, 0 100%, 0 0);
 
-		@include is-max(1071px){
+		@include is-max(1071px) {
 			clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 83% 95%, 0 100%, 0 0);
 		}
 
-		@include is-sp{
+		@include is-sp {
 			padding-top: 95px;
 			padding-bottom: 55px;
 			margin-bottom: 25px;
 			clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 82vw 98%, 0 100%, 0 0);
 		}
 
-			&::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                top: 0;
-                height: 340px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 5vw);
-                opacity: 0.4;
-                width: 79%;
-                right: 0;
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			top: 0;
+			height: 340px;
+			background: linear-gradient(to right, #0059c4, #000017);
+			clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 5vw);
+			opacity: 0.4;
+			width: 79%;
+			right: 0;
 
-				@include is-sp{
-					height: 190px;
-					 clip-path: polygon(100% 0%, 100% 33%, 66% 44%, 0 5vw);
-				}
+			@include is-sp {
+				height: 190px;
+				clip-path: polygon(100% 0%, 100% 33%, 66% 44%, 0 5vw);
+			}
+		}
 
-            }
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			bottom: 0;
+			height: 190px;
+			background: linear-gradient(to right, #0059c4, #000017);
+			clip-path: polygon(0 71%, 38% 23%, 100% 65%, 0% 100%);
+			opacity: 0.4;
+			width: 82%;
 
-            &::after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                bottom: 0;
-                height: 190px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(0 71%, 38% 23%, 100% 65%, 0% 100%);
-                opacity: 0.4;
-                width: 82%;
-
-				@include is-max(1071px){
-					clip-path: polygon(0 58%, 44% 51%, 100% 88%, 0% 100%);
-				}
-
-            }
+			@include is-max(1071px) {
+				clip-path: polygon(0 58%, 44% 51%, 100% 88%, 0% 100%);
+			}
+		}
 
 		.c-buttonREP {
 			margin-top: 0;
