--- a/src/assets/scss/pages/_office-gallery.scss
+++ b/src/assets/scss/pages/_office-gallery.scss
@@ -601,6 +601,10 @@
 							font-size: 18px;
 							color: #fff;
 
+							.l-spacing{
+								letter-spacing: 0.1em;
+							}
+
 							p {
 								line-height: 25px;
 								font-weight: 500;
