--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -139,6 +139,10 @@
 			padding: 209px 0 135px 0;
 			background: linear-gradient(to left, #0059c6, #000017);
 
+			&::before{
+				display: none;
+			}
+
 			@include is-max(750px) {
 				padding: 170px 0 150px 0;
 			}
@@ -302,7 +306,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -449,7 +453,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -466,7 +470,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -489,7 +493,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -626,7 +630,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -698,7 +702,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -723,7 +727,7 @@
 		}
 
 		&--top-realestate {
-			border-left: 3px solid #4688c8;
+			border-left: 3px solid #0059b4;
 			padding-left: 15px;
 			position: relative;
 		}
@@ -741,7 +745,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.2em;
@@ -806,7 +810,7 @@
 				.txt_ttl {
 					@include font-line(26, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.01em;
@@ -856,7 +860,7 @@
 				&_ttl {
 					font-family: century-gothic, sans-serif;
 					@include font-line(11, 22);
-					color: #2589ce;
+					color: #0059b4;
 					letter-spacing: 0.26em;
 					text-align: center;
 					font-weight: 700;
@@ -873,7 +877,7 @@
 					span {
 						margin-left: 10px;
 						font-weight: 700;
-						color: #2589ce;
+						color: #0059b4;
 						@include font-line(13, 26);
 						letter-spacing: 0.2em;
 					}
@@ -1084,7 +1088,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -1102,7 +1106,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 
@@ -1146,7 +1150,7 @@
 		.txt_ttl {
 			@include font-line(24, 30);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.15em;
@@ -1215,7 +1219,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: row-reverse;
-			padding: 90px 0;
+			padding: 90px 0 35px 0;
 
 			@include is-sp {
 				padding: 70px 0;
@@ -1251,7 +1255,7 @@
 				.txt_ttl {
 					@include font-line(24, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.15em;
@@ -1291,7 +1295,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -1308,7 +1312,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -1389,7 +1393,7 @@
 			margin-top: 0;
 
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1495,14 +1499,14 @@
 		.card_ttl {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
-			color: #2589ce;
+			color: #0059b4;
 			font-weight: 700;
 			letter-spacing: 0.2em;
 			padding-bottom: 10px;
 
 			@include is-max(750px) {
 				@include font-line(14, 21);
-				color: #2589ce;
+				color: #0059b4;
 				font-weight: 700;
 				letter-spacing: 0.1em;
 			}
@@ -1625,7 +1629,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1662,7 +1666,7 @@
 		}
 
 		&--top {
-			border-left: 3px solid #2589ce;
+			border-left: 3px solid #0059b4;
 			padding-left: 15px;
 			position: relative;
 		}
@@ -1685,7 +1689,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #2589ce;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.34em;
@@ -1747,7 +1751,7 @@
 		.qtext {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
-			color: #2589ce;
+			color: #0059b4;
 			letter-spacing: 0.2em;
 			text-align: left;
 			font-weight: 700;
@@ -1847,7 +1851,7 @@
 		&_ttl {
 			font-family: century-gothic, sans-serif;
 			@include font-line(11, 22);
-			color: #2589ce;
+			color: #0059b4;
 			letter-spacing: 0.26em;
 			text-align: center;
 			font-weight: 700;
@@ -1864,7 +1868,7 @@
 			span {
 				margin-left: 10px;
 				font-weight: 700;
-				color: #2589ce;
+				color: #0059b4;
 				@include font-line(13, 26);
 				letter-spacing: 0.2em;
 			}
