--- a/src/assets/scss/pages/_realestatemanagement.scss
+++ b/src/assets/scss/pages/_realestatemanagement.scss
@@ -108,7 +108,7 @@
 			top: 0;
 			left: 0;
 			right: 0;
-			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 73% 27%, 0% 12%, 0 0, 0 0);
+			clip-path: polygon(50% 0%, 100% 0, 100% 16%, 68% 27%, 0% 12%, 0 0, 0 0);
 			background: linear-gradient(to right, #0059c6, #000017);
 			opacity: 0.4;
 			@include is-sp {
@@ -136,7 +136,7 @@
 		}
 
 		&__center {
-			padding: 209px 0 135px 0;
+			padding: 200px 0 135px 0;
 			background: linear-gradient(to left, #0059c6, #000017);
 
 			&::before{
@@ -168,7 +168,7 @@
 			@include font-line(30, 48);
 			color: #fff;
 			letter-spacing: 0.18em;
-			padding-top: 10px;
+			padding-top: 5px;
 			padding-bottom: 23px;
 
 			@include is-max(750px) {
@@ -185,7 +185,7 @@
 			}
 
 			.ttl_small {
-				font-family: yu-mincho-pr6n, sans-serif;
+				font-family: YakuHanJP, yu-mincho-pr6n, sans-serif;
 				@include font-line(20, 35);
 				color: #fff;
 				line-height: 0;
@@ -287,9 +287,9 @@
 
 			@include is-sp {
 				width: 164px;
-				top: 0;
+				top: -38px;
 				left: auto;
-				right: 0;
+				right: 21px;
 			}
 		}
 
@@ -376,6 +376,7 @@
 
 			@include is-max(750px) {
 				flex-direction: column-reverse;
+				padding: 30px 0 90px 0;
 			}
 
 			&--left,
@@ -771,7 +772,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: row-reverse;
-			padding-bottom: 100px;
+			padding-bottom: 55px;
 			align-items: center;
 
 			@include is-max(1067px) {
@@ -781,7 +782,7 @@
 			@include is-max(750px) {
 				flex-direction: column-reverse;
 				display: grid;
-				padding-bottom: 75px;
+				padding-bottom: 60px;
 			}
 
 			&--left,
@@ -904,6 +905,7 @@
 
 		@include is-sp{
 			clip-path: polygon(17% 2%, 100% 0, 100% 100%, 87% 98%, 0 100%, 0 0);
+			margin-bottom: 30px;
 		}
 
 		&::before {
@@ -947,7 +949,7 @@
 		&__box-big-new {
 			position: absolute;
 			left: 46%;
-			top: 67px;
+			top: 45px;
 
 			@include is-sp {
 				width: 100px;
@@ -977,7 +979,7 @@
 		&__box-big-new2 {
 			position: absolute;
 			left: 0;
-			bottom: 13%;
+			bottom: 11%;
 
 			@include is-sp {
 				display: none;
@@ -1347,10 +1349,10 @@
 			content: "";
 			position: absolute;
 			width: 83%;
-			height: 25%;
+			height: 30%;
 			top: 0;
 			right: 0;
-			clip-path: polygon(0 0, 100% 0, 100% 18%, 70% 55%, 0 32%);
+			clip-path: polygon(0 0, 100% 0, 100% 18%, 70% 55%, 0 27%);
 			background: linear-gradient(to right, #0059c6, #000017);
 			opacity: 0.4;
 			@include is-sp {
@@ -1400,7 +1402,7 @@
 		&__box-big-new {
 			position: absolute;
 			left: 46%;
-			top: -12%;
+			top: -14%;
 
 			@include is-max(1075px) {
 				left: 52%;
@@ -1408,7 +1410,7 @@
 			}
 
 			@include is-sp {
-				top: -4%;
+				top: -5%;
 				width: 122px;
 				right: 10%;
 				left: auto;
@@ -1483,6 +1485,7 @@
 			@include is-sp {
 				text-align: justify;
 				margin-bottom: 25px;
+				letter-spacing: 0.1em;
 			}
 		}
 
@@ -1529,9 +1532,11 @@
 
 				@include is-sp {
 					display: block;
-					width: 115px;
-					top: -4%;
-					left: -2%;
+					width: 145px;
+					position: relative;
+					bottom: -9px;
+					left: -6px;
+					opacity: 0.3;
 				}
 
 				// @include is-max(375px){
@@ -1616,7 +1621,7 @@
 	}
 
 	.sect_8 {
-		padding-top: 70px;
+		padding-top: 25px;
 		background-color: #fff;
 
 		.xb {
