changed: finished corrections on real estate management page

--- a/src/assets/scss/object/utility/_display.scss
+++ b/src/assets/scss/object/utility/_display.scss
@@ -37,6 +37,18 @@
   }
 }
 
+.u-d-toggle {
+  @include is-min(376px) {
+    display: none;
+  }
+  @include is-max(375px) {
+    display: block;
+  }
+  @include is-max(350px) {
+    display: none;
+  }
+}
+
 .u-d-f {
   display: flex !important;
 }
