--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -1221,13 +1221,13 @@
 		// -webkit-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
 		// -moz-box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
 		// box-shadow: inset 0 1px 1px #5f95fc, 0 1px 0 #5f95fc;
-		background: #ad1e32;
+		background: #fff;
 		border: 1px solid #258acf;
 	}
 
 	input[type="checkbox"]:checked:after {
 		// content: "url(../../release/image/page/contact/checkmark.png)";
-		content: url("https://ad-ruf.hipetest.com/wp-content/uploads/2021/12/checkmark_4.png");
+		content: url("https://ad-ruf.hipetest.com/wp-content/uploads/2021/12/checkmark_4-1.png");
 		color: white !important;
 		-webkit-text-fill-color: white !important;
 		// background: url(../../release/image/page/contact/checkmark_1.svg);
