result-page added chart details when hover

--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -150,10 +150,10 @@
 
 			img {
 				&:nth-of-type(2) {
-					padding-top: 40px;
+					margin-top: 40px;
 
 					@include is-sp {
-						padding-top: 25px;
+						margin-top: 25px;
 					}
 				}
 			}
