--- a/src/assets/scss/pages/_result.scss
+++ b/src/assets/scss/pages/_result.scss
@@ -142,10 +142,14 @@
 		}
 
 		&__charts {
-			padding-top: 60px;
 
 			@include is-sp {
 				padding-top: 0;
+			}
+
+			&--block{
+				background-color: #fff;
+				padding: 40px;
 			}
 
 			img {
@@ -231,4 +235,108 @@
 			display: block;
 		}
 	}
+
+		/* Chart.js */
+	/*
+	* DOM element rendering detection
+	* https://davidwalsh.name/detect-node-insertion
+	*/
+	@keyframes chartjs-render-animation {
+		from { opacity: 0.99; }
+		to { opacity: 1; }
+	}
+
+	.chartjs-render-monitor {
+		animation: chartjs-render-animation 0.001s;
+	}
+
+	/*
+	* DOM element resizing detection
+	* https://github.com/marcj/css-element-queries
+	*/
+	.chartjs-size-monitor,
+	.chartjs-size-monitor-expand,
+	.chartjs-size-monitor-shrink {
+		position: absolute;
+		direction: ltr;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		overflow: hidden;
+		pointer-events: none;
+		visibility: hidden;
+		z-index: -1;
+	}
+
+	.chartjs-size-monitor-expand > div {
+		position: absolute;
+		width: 1000000px;
+		height: 1000000px;
+		left: 0;
+		top: 0;
+	}
+
+	.chartjs-size-monitor-shrink > div {
+		position: absolute;
+		width: 200%;
+		height: 200%;
+		left: 0;
+		top: 0;
+	}
+
+	.p-result-chart__chart, .p-result-chart__chart--sales{
+		@include is-max(600px){
+			height: 48vw;
+		}
+	}
+
+	.p-content-block__body{
+		margin: 50px 0 0 0;
+
+		@include is-sp{
+			margin: 0;
+		}
+
+		.p-result-chart__ttl{
+			color: #2759ad;
+			margin-bottom: 1em;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+
+			span{
+				color: #666666;
+				@include font-line(14, 14);
+			}
+		}
+
+		.p-result-chart__block{
+			background-color: #fff;
+			padding: 40px;
+
+			@include is-sp{
+				padding: 4vw;
+			}
+		}
+
+		#chart-income{
+			@include is-pc{
+				height: 400px !important;
+			}
+		}
+
+		#chart-current-profit{
+			@include is-pc{
+				height: 180px !important;
+			}
+		}
+
+		.p-result-chart__block:nth-of-type(2){
+			margin-top: 40px;
+		}
+	}
+
+
+
 }
